[gd_scene load_steps=5 format=2]

[ext_resource path="res://world/ZapGate.gd" type="Script" id=1]
[ext_resource path="res://world/light.png" type="Texture" id=2]
[ext_resource path="res://world/zapgate.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "run"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("zapgate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "turn_on"
} ]
}

[node name="ZapGate" type="Node2D"]
script = ExtResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 1, 0 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 7

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 47, 0 )
width = 2.0
default_color = Color( 0.482353, 0.701961, 0.52549, 0.666667 )

[node name="Line2D2" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 47, 0 )
width = 1.0
default_color = Color( 1, 1, 1, 0.239216 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 13, 0 )
scale = Vector2( 0.0341797, 0.0205841 )
texture = ExtResource( 2 )
range_layer_min = -512
range_layer_max = 512

[node name="zapgate" type="Sprite" parent="."]
position = Vector2( 2, 1 )
texture = ExtResource( 3 )
hframes = 3

[node name="ZapTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "run"
anims/run = SubResource( 1 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.2
emission_shape = 2
emission_rect_extents = Vector2( 0, 3 )
direction = Vector2( -1, 0 )
spread = 93.08
gravity = Vector2( 0, 0 )
initial_velocity = 34.48
initial_velocity_random = 0.16
[connection signal="timeout" from="ZapTimer" to="." method="_on_ZapTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
